--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/luxplanjay/webpack-starter-kit/issues"
   },
-  "homepage": "https://erastfandorin.github.io/goit-js-hw-11-color-switch/",
+  "homepage": "https://rostyslav1988.github.io/goit-js-hw-11-color__switch/",
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
